--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   overflow-y: auto;
 }
 
+body {
+  background: repeating-linear-gradient(#fff, #fff 89.99999%, #e41c38 90%, #e41c38 100%);
+}
+
 .scroll-off {
   overflow-y: hidden;
 }
@@ -153,6 +157,7 @@ a {
   margin-bottom: 10px;
   color: #001a33;
   font-size: 40px;
+  margin: 0 2vw;
 }
 
 #welcome-section p {
@@ -173,7 +178,9 @@ a {
   z-index: 2;
   background-color: none;
 }
+/* ------------------------------------------------- */
 
+/* About Me Section */
 #about-me {
   background-color: #e41c38;
   min-height: 800px;
@@ -620,27 +627,41 @@ footer {
   height: 200px;
   font-family: soleto, sans-serif;
   font-weight: 500;
+  top: -100px;
 }
 
-footer > p {
+@media (max-width: 900px) {
+  footer {
+    top: -40px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 722px) {
+  footer {
+    margin-bottom: 70px;
+  }
+}
+
+.footer-container > p {
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
-  top: -90px;
   color: #fff;
   text-align: center;
   font-size: 20px;
   font-weight: 500;
 }
 
-footer > ul {
+.footer-container > ul {
   display: flex;
   position: relative;
   justify-content: center;
   align-items: center;
-  top: -70px;
+  margin: 40px 0;
 }
+
 footer li {
   padding: 5px 3vw;
   list-style: none;
@@ -654,7 +675,6 @@ footer span {
   justify-content: center;
   font-size: 18px;
   color: #fff;
-  top: -30px;
   font-size: 20px;
 }
 
@@ -666,6 +686,10 @@ footer span {
   text-align: center;
   color: #fff;
   transition: all 0.4s ease-in-out;
+}
+
+.footer-icon > .fab {
+  margin: 0px;
 }
 
 .footer-icon > i {
@@ -686,7 +710,6 @@ footer span {
 /* ------------------------------------------------- */
 
 /* Full Page Loader */
-
 div.loading {
   opacity: 1;
   position: fixed;
